Fix issue where some images were too large for modal and would overflow their parent container with css.

--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -93,6 +93,11 @@ h4 {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+#userMatchPhoto {
+    max-width: 350px;
+    height: auto;
+}
+
 /* media queries for added responsiveness */
 @media only screen and (max-width:768px) {
     .homeContainer {
